--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,7 +3,7 @@
     "commands": [
       {
         "cmd": "cargo run"
-        // "cmd": "python3 arc.py"
+        //"cmd": "cargo test"
       }
     ]
   }
