--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,8 +2,8 @@
   "saveAndRun": {
     "commands": [
       {
-        "cmd": "cargo run"
-        //"cmd": "cargo test"
+        // "cmd": "cargo run"
+        "cmd": "cargo test"
       }
     ]
   }
